# dino

./: LICENSE  README.md  pyproject.toml
dino/: __init__.py  affine.py  augs.py  dicom.py  image.py  ops.py  structs.py  utils.py
testing/: faking.py  watch_tests.py  watchdog_dev.py
tests/: test_dicom.py  test_ops.py
