
[project]
name = "dino"
version = "0.1.0"
authors = [{name = 'Kay Lamerigts'}]
dependencies = [
  'black',
  'isort',
  'numpy',
  'pydicom',
  'watchdog',
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
