
[project]
name = "dino"
version = "0.1.0"
authors = [{name = 'Kay Lamerigts'}]
dependencies = [
  'black',
  'isort',
  'numpy',
  'mypy',
  'pydicom',
  'watchdog',
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dino", "testing"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
