
[project]
name = "dino"
version = "0.1.0"
authors = [{name = 'Kay Lamerigts'}]
dependencies = [
  'black',
  'etils',
  'isort',
  'mypy',
  'numpy',
  'pydicom',
  'scipy',
  'watchdog',
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dino", "testing"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.ndimage"
ignore_errors = true
